# peli-gen

./: .gitignore  LICENSE  Makefile  README.md  VISUAL_TESTING_README.md  implementation_epic.md  package-lock.json  package.json  pelicanconf.py  playwright.config.ts  publishconf.py  pyproject.toml  tailwind.config.js  todo.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yaml  deploy.yaml  pelican.yaml
content/: post01.markdown  post02.markdown  post03.markdown  post04.markdown  post05.markdown  post06.markdown  post07.markdown  post08.markdown  post09.markdown  post10.markdown  test-post.md
content/blog/: post1.md  review_philosophy_swd.md  review_pswd.md  road_to_data_engineering.md
content/pages/: about.md  contact.md  impressum.md  privacy.md
content/projects/: iss-tracker.md  iss_tracker.md  pelican.md  place_holer_pipeline.md  task-orbit.md  task_orbit.md
output/: a-sample-article-01.html  a-sample-article-02.html  a-sample-article-03.html  a-sample-article-04.html  a-sample-article-05.html  a-sample-article-06.html  a-sample-article-07.html  a-sample-article-08.html  a-sample-article-09.html  a-sample-article-10.html  archives.html  authors.html  categories.html  index.html  index2.html  my-first-post.html  tags.html
output/author/: david-zimmermann.html  david-zimmermann2.html  dezeat.html  dezeat2.html
output/category/: blog.html  news.html  news2.html
output/pages/: about.html
output/tag/: tag11.html  tag12.html  tag13.html  (+14 more)
scripts/: install_playwright_fedora.sh
tests/: visual.spec.ts
(+27 files in other folders)
