[project]
name = "peli-gen"
version = "0.1.0"
description = "A package and venv for pelican based static site generation"
authors = [
    {name = "dezeat"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pelican (>=4.11.0,<5.0.0)",
    "markdown (>=3.9,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
